--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -240,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-sm-2 search-right">
                 <ul class="heart">
                     <li>
-                        <a href="#" >
+                        <a href="chat" target="_blank" >
                             <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                             <label id="messageNumber"></label>
                         </a>
